[doc]完善许可